Added Alexnet, GoogLeNet, VGG16 with profilers

--- a/models/skyline_extraction_client/peaklens-optimized-training.ipynb
+++ b/models/skyline_extraction_client/peaklens-optimized-training.ipynb
@@ -557,7 +557,12 @@
     "        \"outputs\": exporter.generic_signature({\"output\": softmax})\n",
     "        #\"regress\": exporter.regression_signature(x, y)\n",
     "    })\n",
-    "    export.export('./export/', tf.constant(123), sess)"
+    "    export.export('./export/', tf.constant(123), sess)\n",
+    "    \n",
+    "    tf.saved_model.simple_save(sesh,\n",
+    "            './export-pb/',\n",
+    "            inputs={\"input\": input_node},\n",
+    "            outputs={\"output\": net.get_output()})"
    ]
   }
  ],
